# TokenMaster

./: .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  M0_ACCEPTANCE.md  P3D0_ACCEPTANCE.md  P3E_ACCEPTANCE.md  README.md  README_RU.md  deny.toml  rust-toolchain.toml
crates/app/: Cargo.toml
crates/app/src/: application.rs  application_tests.rs  command.rs  command_tests.rs  data_root.rs  lib.rs  main.rs  notification.rs  notification_tests.rs  operation.rs  operation_tests.rs  state.rs  state_tests.rs
crates/app/tests/: backup_ui_latency_contract.rs  data_root_contract.rs  recovery_adversarial_contract.rs
crates/codex/: Cargo.toml
crates/codex/src/: checkpoint_codec.rs  file_identity.rs  identity.rs  lib.rs  path_policy.rs  provider.rs  roots.rs
crates/codex/tests/: checkpoint_codec_contract.rs  file_enumeration_contract.rs  parser_adversarial_contract.rs  parser_lineage_contract.rs  parser_state_contract.rs  parser_usage_contract.rs  pipeline_contract.rs  quota_live_contract.rs  quota_normalization_contract.rs  quota_transport_adversarial_contract.rs  quota_transport_contract.rs  quota_transport_resource_contract.rs  reader_contract.rs  reader_revalidation_contract.rs  root_discovery_contract.rs  source_discovery_contract.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: activity.rs  bridge.rs  controller.rs  dashboard.rs  history.rs  in_app_notification.rs  lib.rs  main.rs  models.rs  native_tray.rs  notifications.rs  presentation.rs  presentation_style.rs  projects.rs  reliable_state.rs  sessions.rs  shell.rs  skin.rs  ui.rs
crates/desktop/tests/: activity_projection_contract.rs  board_preferences_ui_contract.rs  bridge_event_loop_contract.rs  controller_contract.rs  current_user_startup_ui_contract.rs  dashboard_projection_contract.rs  history_projection_contract.rs  history_range_bridge_contract.rs  history_range_controller_contract.rs  in_app_notification_ui_contract.rs  localization_contract.rs  models_projection_contract.rs  notifications_projection_contract.rs  presentation_color_scheme_contract.rs  presentation_color_scheme_ui_contract.rs  presentation_contract.rs  presentation_density_ui_contract.rs  presentation_layout_ui_contract.rs  presentation_skin_ui_contract.rs  presentation_style_contract.rs  projects_projection_contract.rs  recovery_ui_contract.rs  reliable_state_projection_contract.rs  reminder_settings_ui_contract.rs  session_detail_controller_contract.rs  session_pagination_controller_contract.rs  sessions_projection_contract.rs  skin_palette_contract.rs  tray_lifecycle_contract.rs  ui_contract.rs
crates/desktop/ui/: main.slint  models.slint  projection-strings.slint  tokens.slint  tray.slint
crates/platform/: Cargo.toml
crates/platform/src/: archive_recovery.rs  backup_directory.rs  current_session.rs  current_user_startup.rs  durable_file.rs  file_dialog.rs  lease.rs  lib.rs  local_directory.rs  power.rs  unix.rs  unsupported.rs  windows.rs
crates/platform/tests/: archive_recovery_contract.rs  backup_directory_contract.rs  current_user_startup_contract.rs  durable_file_contract.rs  file_dialog_contract.rs  physical_identity_contract.rs  power_monitor_contract.rs  writer_lease_contract.rs
crates/probe-app/: Cargo.toml  build.rs
crates/probe-app/src/: args.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  presentation.rs  shell.rs  stress.rs  tray.rs  ui_runtime.rs
crates/probe-app/tests/: lifecycle_contract.rs  metrics_contract.rs  presentation_contract.rs  skin_runtime_contract.rs  stress_contract.rs
crates/probe-app/ui/: main.slint  models.slint  tokens.slint  tray.slint
crates/product/: Cargo.toml
crates/product/src/: lib.rs  reducer.rs  route.rs  runtime.rs  section.rs  snapshot.rs
crates/product/tests/: reducer_contract.rs  resource_contract.rs  route_contract.rs  runtime_status_contract.rs  session_detail_contract.rs
crates/provider/: Cargo.toml
crates/provider/src/: capability.rs  discovery.rs  error.rs  identity.rs  lib.rs  repository.rs
crates/provider/tests/: provider_contract.rs  repository_activity_contract.rs
crates/query/: Cargo.toml
crates/query/src/: activity.rs  analytics.rs  benefit.rs  calendar.rs  clock.rs  error.rs  git_output.rs  identity.rs  lib.rs  publication.rs  quota.rs  quota_identity.rs  service.rs  session.rs  status.rs
crates/query/tests/: aggregate_scale_contract.rs  analytics_value_contract.rs  benefit_query_contract.rs  benefit_scale_contract.rs  git_efficiency_contract.rs  git_output_contract.rs  git_scale_contract.rs  performance_contract.rs  product_status_contract.rs  product_status_scale_contract.rs  publication_contract.rs  quota_scale_contract.rs  quota_service_contract.rs  quota_value_contract.rs  recent_history_contract.rs  resource_contract.rs  rhythm_contract.rs  service_contract.rs  session_value_contract.rs  value_contract.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: clock.rs  codex_adapter.rs  error.rs  hints.rs  incremental.rs  lease.rs  lib.rs  lifecycle.rs  live.rs  provider.rs  provider_quota.rs  publication.rs  recovery.rs  scheduler.rs  store_archive.rs  watcher.rs
crates/runtime/tests/: bootstrap_contract.rs  completion_notifier_contract.rs  git_runtime_contract.rs  git_runtime_resource_contract.rs  incremental_contract.rs  lease_bridge_contract.rs  live_runtime_contract.rs  provider_checkpoint_contract.rs  provider_live_runtime_contract.rs  provider_quota_runtime_contract.rs  publication_contract.rs  quota_discovery_contract.rs  quota_runtime_contract.rs  quota_runtime_resource_contract.rs  recovery_contract.rs  reminder_runtime_contract.rs  reminder_runtime_resource_contract.rs  repository_hint_contract.rs  scheduler_contract.rs  state_guard_handoff_contract.rs  watcher_contract.rs
crates/state/: Cargo.toml
crates/state/src/: bootstrap.rs  catalog.rs  error.rs  lib.rs  record.rs  record_contract_tests.rs  retention.rs  run_state.rs
crates/state/tests/: authority_contract.rs  automatic_recovery_contract.rs  backup_performance_contract.rs  (+13 more)
crates/store/: Cargo.toml
docs/: HANDOFF.md  (+9 more)
(+395 files in other folders)
