[package]
name = "tokenmaster-codex"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokenmaster-domain = { path = "../domain" }
tokenmaster-platform = { path = "../platform" }
tokenmaster-provider = { path = "../provider" }

[dev-dependencies]
tempfile.workspace = true
tokenmaster-accounting = { path = "../accounting" }
tokenmaster-store = { path = "../store" }

[target.'cfg(windows)'.dev-dependencies]
windows.workspace = true

[[test]]
name = "quota_transport_resource_contract"
path = "tests/quota_transport_resource_contract.rs"
harness = false
