[package]
name = "tokenmaster-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
slint.workspace = true
tokenmaster-engine = { path = "../engine" }
tokenmaster-product = { path = "../product" }
tokenmaster-query = { path = "../query" }

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
i-slint-backend-testing = "=1.17.1"
tempfile.workspace = true
tokenmaster-store = { path = "../store" }
