[package]
name = "tokenmaster-product"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokenmaster-query = { path = "../query" }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
tokenmaster-store = { path = "../store" }
