[package]
name = "tokenmaster-product"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokenmaster-engine = { path = "../engine" }
tokenmaster-query = { path = "../query" }
tokenmaster-runtime = { path = "../runtime" }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
tokenmaster-codex = { path = "../codex" }
tokenmaster-provider = { path = "../provider" }
tokenmaster-store = { path = "../store" }
