[package]
name = "tokenmaster-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokenmaster-domain = { path = "../domain" }
tokenmaster-platform = { path = "../platform" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
