[package]
name = "tokenmaster-query"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tokenmaster-domain = { path = "../domain" }
tokenmaster-store = { path = "../store" }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
windows.workspace = true
