[package]
name = "tokenmaster-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
tokenmaster-codex = { path = "../codex" }
tokenmaster-engine = { path = "../engine" }
tokenmaster-provider = { path = "../provider" }
tokenmaster-store = { path = "../store" }

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dev-dependencies]
windows.workspace = true
