[package]
name = "tokenmaster-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dev-dependencies]
tempfile.workspace = true

[dependencies]
age.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenmaster-platform = { path = "../platform" }
zstd.workspace = true
