[package]
name = "tokenmaster-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libsqlite3-sys.workspace = true
rusqlite.workspace = true
tokenmaster-accounting = { path = "../accounting" }
tokenmaster-benefits = { path = "../benefits" }
tokenmaster-domain = { path = "../domain" }
tokenmaster-quota = { path = "../quota" }

[dev-dependencies]
tempfile.workspace = true
